--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "type": "commonjs",
   "author": "mrganmak",
-  "license": "ISC",
+  "license": "Unlicense",
   "dependencies": {
     "@discordx/importer": "^1.1.2",
     "@types/express": "^4.17.13",
